2005-07-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-gnome.scm: remove beam routine.

	* scm/output-ps.scm (scm): idem.

	* scm/output-svg.scm: remove beam.

	* ps/music-drawing-routines.ps: remove draw_beam.

	* lily/lookup.cc (beam): use round_filled_polygon() for beam.

	* flower/include/guile-compatibility.hh (scm_from_locale_string):
	add scm_from_locale_string compatibility glue. 

2005-07-13  Yoshinobu Isizaki  <isizaki@mte.biglobe.ne.jp>

	* scripts/lilypond-book.py: Prevent occuring error when
	'lilypond-book --output=foo/ somefile.ly' is executed multiple
	times and target file shoud be overwritten.  (Error message said
	'input file and output file is same'.)

2005-07-13  Graham Percival  <gperlist@shaw.ca>

	* input/regression/slur-extreme.ly, input/regression/slur-scoring.ly,
	lily/slur-configuration.cc, lily/slur.cc, mf/feta-din-code.mf,
	mf/feta-timesig.mf, mf/parmesan-heads.mf, scm/define-grob-properties.scm:
	Change "excentricity" to "eccentricity".

	* Documentation/user/converters.itely: fix URL for Noteedit and Rosegarden.

	* THANKS: added Yoshinobu Isizaki.

2005-07-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (justify-field): add. 

	* scm/define-grobs.scm (all-grob-descriptions): decrease font size.

2005-07-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lookup.cc (filled_box): express filled_box with
	round_filled_box

	* scm/midi.scm (paper-book-write-midis): new function. Write all
	performances in numbered MIDI files.

	* lily/performance-scheme.cc (LY_DEFINE): new file.
	(LY_DEFINE): new function ly:performance-write.

	* lily/lily-parser-scheme.cc (LY_DEFINE): ly:parser-output-name:
	new function.
	(LY_DEFINE): change name ly:parser-define -> ly:parser-define!

	* scm/framework-*.scm: use port arguments throughout.

	* lily/include/lily-guile.hh: rename ly_c_X_p -> ly_is_X

	* lily/paper-outputter.cc (Paper_outputter): take port argument.
